--- a/front/package.json
+++ b/front/package.json
@@ -72,7 +72,8 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "sass": "^1.35.2",
-    "sockjs-client": "^1.5.1"
+    "sockjs-client": "^1.5.1",
+    "uuid": "^8.3.2"
   },
   "repository": {
     "type": "git",
